--- a/fish.html
+++ b/fish.html
@@ -12,7 +12,10 @@
     <div class="important">
       <h2>Types of fish</h2>
 
-      <p>There are many types of fish. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>There are many types of fish. There are <span class="fish-type">red</span> fish,
+      <span class="fish-type">green</span> fish, <span class="fish-type">one</span> fish,
+      and <span class="fish-type">tyo</span> fish.
+      There are also more types of fish than you could possibly imagine.</p>
 
       <p>Here are some types of fish:</p>
 
@@ -24,7 +27,10 @@
 
       <h2>Other important stuff</h2>
 
-      <p>Here is some other really important stuff about fish. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      <p>Here is some other really important stuff about fish.
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+      ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+      in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
     </div>
 
     <p>Now, for some less important stuff about fish.</p>
@@ -32,7 +38,9 @@
     <div class="unimportant">
       <h2>Fish like to play golf</h2>
 
-      <p>Little-known fact: fish like to play golf. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+      <p>Little-known fact: fish like to play golf. Sed ut perspiciatis unde omnis iste natus error sit
+      voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
+      veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
 
       <h2>Fish are not mammals</h2>
 
