New Blog Project updates

--- a/blog.html
+++ b/blog.html
@@ -1,44 +1,50 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/stbl.css" rel="stylesheet" type="text/css">
     <title>Blog Project</title>
-    <link href="css/styles-blog" ref="stylesheet" type="text/css" media="all">
   </head>
 
   <body>
-    <h1>Life of Sabrina</h1>
-    <h3>1/12/2019</h3>
-    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-    totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta
-    sunt explicabo.
-    </p>
-    <h3>9/12/2018</h3>
-    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-    consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
-    qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi
-    tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam,
-    quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
-    Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
-    vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-    </p>
+    <h1>Our Stories</h1>
+    <h1><strong>Life of Sabrina</strong></h1>
+    <h3><em>1/12/2019</em></h3>
+    <div class="intro">
+      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta
+        sunt explicabo.
+      </p>
+    </div>
+
+    <div class="sab-text">
+      <h3>9/12/2018</h3>
+      <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+        consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
+        qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi
+        tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam,
+        quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
+        Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
+        vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+      </p>
+    </div>
 
     <h1>Life of Kevin</h1>
     <h3>1/12/2019</h3>
-    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+    <span class="blog-post"><p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
     totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta
-    sunt explicabo.
+    sunt explicabo.</span>
     </p>
     <h3>11/30/2018</h3>
-    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+    <span class="blog-post"><p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
     consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
     qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi
     tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-    </p>
+    </p></span>
     <h3>9/12/2018</h3>
-    <p>Ut enim ad minima veniam,
+    <span class="blog-post"><p>Ut enim ad minima veniam,
     quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
     Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
     illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-    </p>
+    </p></span>
   </body>
 </html>
