Added box model stylesheet css

--- a/blog.html
+++ b/blog.html
@@ -29,22 +29,25 @@
     </div>
 
     <h1>Life of Kevin</h1>
+    <div class="blog-post">
     <h3>1/12/2019</h3>
-    <span class="blog-post"><p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
     totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta
-    sunt explicabo.</span>
+    sunt explicabo.</div>
     </p>
+    <div class="blog-post">
     <h3>11/30/2018</h3>
-    <span class="blog-post"><p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
     consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
     qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi
     tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-    </p></span>
+  </p></div>
+    <div class="blog-post">
     <h3>9/12/2018</h3>
-    <span class="blog-post"><p>Ut enim ad minima veniam,
+    <p>Ut enim ad minima veniam,
     quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
     Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
     illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-    </p></span>
+  </p></div>
   </body>
 </html>
